--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "compilerOptions": {
         "rootDir": "src",
         "outDir": "dist",
-        "target": "es5",        
+        "target": "es5",
+        "module": "es6",     
         "moduleResolution": "node",
         "noImplicitAny": true,
         "noImplicitReturns": true,
