--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,12 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "lib": ["es5", "es6", "dom"],
-        "rootDir": "src"
-    }
+  "compilerOptions": {
+    "esModuleInterop": true,
+    "module": "commonjs",
+    "lib": ["es5", "es6", "dom"],
+    "rootDir": "src",
+      "typeRoots": [
+       "./node_modules/@types",
+       "./@types"
+     ]
+  }
 }
