--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "esModuleInterop": true,
     "module": "commonjs",
-    "lib": ["es5", "es6", "dom"],
+    "lib": ["es5", "es6", "dom", "ES2017"],
     "rootDir": "src",
       "typeRoots": [
        "./node_modules/@types",
